--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -291,6 +292,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -824,7 +826,104 @@ allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
+allow 204.8.96.100;
+allow 204.8.96.101;
+allow 204.8.96.102;
+allow 204.8.96.103;
+allow 204.8.96.104;
+allow 204.8.96.105;
+allow 204.8.96.106;
+allow 204.8.96.107;
+allow 204.8.96.108;
+allow 204.8.96.109;
+allow 204.8.96.110;
+allow 204.8.96.111;
+allow 204.8.96.112;
+allow 204.8.96.113;
+allow 204.8.96.114;
+allow 204.8.96.115;
+allow 204.8.96.116;
+allow 204.8.96.117;
+allow 204.8.96.118;
+allow 204.8.96.119;
 allow 204.8.96.120;
+allow 204.8.96.121;
+allow 204.8.96.122;
+allow 204.8.96.123;
+allow 204.8.96.140;
+allow 204.8.96.141;
+allow 204.8.96.142;
+allow 204.8.96.143;
+allow 204.8.96.144;
+allow 204.8.96.145;
+allow 204.8.96.146;
+allow 204.8.96.147;
+allow 204.8.96.148;
+allow 204.8.96.149;
+allow 204.8.96.150;
+allow 204.8.96.151;
+allow 204.8.96.152;
+allow 204.8.96.153;
+allow 204.8.96.154;
+allow 204.8.96.155;
+allow 204.8.96.156;
+allow 204.8.96.157;
+allow 204.8.96.158;
+allow 204.8.96.159;
+allow 204.8.96.160;
+allow 204.8.96.161;
+allow 204.8.96.162;
+allow 204.8.96.163;
+allow 204.8.96.164;
+allow 204.8.96.165;
+allow 204.8.96.166;
+allow 204.8.96.167;
+allow 204.8.96.168;
+allow 204.8.96.169;
+allow 204.8.96.170;
+allow 204.8.96.171;
+allow 204.8.96.172;
+allow 204.8.96.173;
+allow 204.8.96.174;
+allow 204.8.96.175;
+allow 204.8.96.176;
+allow 204.8.96.177;
+allow 204.8.96.178;
+allow 204.8.96.179;
+allow 204.8.96.180;
+allow 204.8.96.181;
+allow 204.8.96.182;
+allow 204.8.96.183;
+allow 204.8.96.184;
+allow 204.8.96.185;
+allow 204.8.96.186;
+allow 204.8.96.187;
+allow 204.8.96.188;
+allow 204.8.96.189;
+allow 204.8.96.64;
+allow 204.8.96.65;
+allow 204.8.96.66;
+allow 204.8.96.67;
+allow 204.8.96.68;
+allow 204.8.96.69;
+allow 204.8.96.70;
+allow 204.8.96.71;
+allow 204.8.96.72;
+allow 204.8.96.73;
+allow 204.8.96.74;
+allow 204.8.96.75;
+allow 204.8.96.76;
+allow 204.8.96.77;
+allow 204.8.96.78;
+allow 204.8.96.79;
+allow 204.8.96.80;
+allow 204.8.96.81;
+allow 204.8.96.82;
+allow 204.8.96.83;
+allow 204.8.96.86;
+allow 204.8.96.87;
+allow 204.8.96.88;
+allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
@@ -1170,7 +1269,104 @@ allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:18c:0:192::230;
+allow 2620:7:6001::101;
+allow 2620:7:6001::102;
+allow 2620:7:6001::103;
+allow 2620:7:6001::104;
+allow 2620:7:6001::105;
+allow 2620:7:6001::106;
+allow 2620:7:6001::107;
+allow 2620:7:6001::108;
+allow 2620:7:6001::109;
+allow 2620:7:6001::110;
+allow 2620:7:6001::111;
+allow 2620:7:6001::112;
+allow 2620:7:6001::113;
+allow 2620:7:6001::114;
+allow 2620:7:6001::115;
+allow 2620:7:6001::116;
+allow 2620:7:6001::117;
+allow 2620:7:6001::118;
+allow 2620:7:6001::119;
 allow 2620:7:6001::120;
+allow 2620:7:6001::121;
+allow 2620:7:6001::122;
+allow 2620:7:6001::123;
+allow 2620:7:6001::140;
+allow 2620:7:6001::141;
+allow 2620:7:6001::142;
+allow 2620:7:6001::143;
+allow 2620:7:6001::144;
+allow 2620:7:6001::145;
+allow 2620:7:6001::146;
+allow 2620:7:6001::147;
+allow 2620:7:6001::148;
+allow 2620:7:6001::149;
+allow 2620:7:6001::150;
+allow 2620:7:6001::151;
+allow 2620:7:6001::152;
+allow 2620:7:6001::153;
+allow 2620:7:6001::154;
+allow 2620:7:6001::155;
+allow 2620:7:6001::156;
+allow 2620:7:6001::157;
+allow 2620:7:6001::158;
+allow 2620:7:6001::159;
+allow 2620:7:6001::160;
+allow 2620:7:6001::161;
+allow 2620:7:6001::162;
+allow 2620:7:6001::163;
+allow 2620:7:6001::164;
+allow 2620:7:6001::165;
+allow 2620:7:6001::166;
+allow 2620:7:6001::167;
+allow 2620:7:6001::168;
+allow 2620:7:6001::169;
+allow 2620:7:6001::170;
+allow 2620:7:6001::171;
+allow 2620:7:6001::172;
+allow 2620:7:6001::173;
+allow 2620:7:6001::174;
+allow 2620:7:6001::175;
+allow 2620:7:6001::176;
+allow 2620:7:6001::177;
+allow 2620:7:6001::178;
+allow 2620:7:6001::179;
+allow 2620:7:6001::180;
+allow 2620:7:6001::181;
+allow 2620:7:6001::182;
+allow 2620:7:6001::183;
+allow 2620:7:6001::184;
+allow 2620:7:6001::185;
+allow 2620:7:6001::186;
+allow 2620:7:6001::187;
+allow 2620:7:6001::188;
+allow 2620:7:6001::189;
+allow 2620:7:6001::e664;
+allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e641;
+allow 2620:7:6001::ffff:c759:e642;
+allow 2620:7:6001::ffff:c759:e643;
+allow 2620:7:6001::ffff:c759:e644;
+allow 2620:7:6001::ffff:c759:e645;
+allow 2620:7:6001::ffff:c759:e646;
+allow 2620:7:6001::ffff:c759:e647;
+allow 2620:7:6001::ffff:c759:e648;
+allow 2620:7:6001::ffff:c759:e649;
+allow 2620:7:6001::ffff:c759:e64a;
+allow 2620:7:6001::ffff:c759:e64b;
+allow 2620:7:6001::ffff:c759:e64c;
+allow 2620:7:6001::ffff:c759:e64d;
+allow 2620:7:6001::ffff:c759:e64e;
+allow 2620:7:6001::ffff:c759:e64f;
+allow 2620:7:6001::ffff:c759:e650;
+allow 2620:7:6001::ffff:c759:e651;
+allow 2620:7:6001::ffff:c759:e652;
+allow 2620:7:6001::ffff:c759:e653;
+allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
+allow 2620:7:6001::ffff:c759:e658;
+allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
@@ -1211,6 +1407,7 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1284,11 +1481,15 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
+allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1540,9 +1741,10 @@ allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
+allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
-allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
@@ -1618,6 +1820,7 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
+allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1670,15 +1873,20 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.254.3;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.113.143;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
@@ -1694,16 +1902,15 @@ allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.108;
 allow 5.255.99.124;
+allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.225.193.107;
 allow 5.42.80.232;
 allow 5.42.80.233;
-allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
@@ -1806,6 +2013,7 @@ allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
+allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.213.174.248;
 allow 89.234.157.254;
